Libraries/GTK/src/gtkextra/gtkplot.h

typedef struct _GtkPlot		GtkPlot;
typedef struct _GtkPlotAxis 	GtkPlotAxis;
typedef enum
{
  GTK_PLOT_LINE_NONE		,
  GTK_PLOT_LINE_SOLID		,
  GTK_PLOT_LINE_DOTTED		,
  GTK_PLOT_LINE_DASHED		,
  GTK_PLOT_LINE_DOT_DASH	,
  GTK_PLOT_LINE_DOT_DOT_DASH	,
  GTK_PLOT_LINE_DOT_DASH_DASH
} GtkPlotLineStyle;
void		gtk_plot_axis_set_ticks_length	(GtkPlotAxis *axis,
						 gint length);
void		gtk_plot_axis_set_ticks_width	(GtkPlotAxis *axis,
						 gfloat width);
void		gtk_plot_axis_show_ticks	(GtkPlotAxis *axis,
                                                 gint major_mask,
				gint minor_mask);
void		gtk_plot_axis_set_ticks_limits	(GtkPlotAxis *axis,
						 gdouble begin, gdouble end);
void		gtk_plot_axis_unset_ticks_limits(GtkPlotAxis *axis);
void		gtk_plot_axis_show_labels	(GtkPlotAxis *axis,
						 gint labels_mask);
void		gtk_plot_axis_title_set_attributes
						(GtkPlotAxis *axis,
					 	 const gchar *font,
					 	 gint height,
					 	 gint angle,
					 	 const GdkColor *foreground,
						 const GdkColor *background,
                                        	 gboolean transparent,
                                        	 GtkJustification justification);
void		gtk_plot_axis_set_labels_attributes
						(GtkPlotAxis *axis,
					 	 const gchar *font,
						 gint height,
						 gint angle,
						 const GdkColor *foreground,
						 const GdkColor *background,
                                        	 gboolean transparent,
                                        	 GtkJustification justification);
void 		gtk_plot_axis_use_custom_tick_labels
						(GtkPlotAxis *axis,
                                      		 gboolean use);
  /* Grids */
void		gtk_plot_x0_set_visible			(GtkPlot *plot,
							 gboolean visible);
gboolean 	gtk_plot_x0_visible			(GtkPlot *plot);
void 		gtk_plot_y0_set_visible			(GtkPlot *plot,
							 gboolean visible);
gboolean 	gtk_plot_y0_visible			(GtkPlot *plot);
void		gtk_plot_grids_set_visible		(GtkPlot *plot,
                				         gboolean vmajor,
						 	 gboolean vminor,
                        				 gboolean hmajor,
							 gboolean hminor);
void		gtk_plot_grids_visible		        (GtkPlot *plot,
                         				 gboolean *vmajor,
							 gboolean *vminor,
                         				 gboolean *hmajor,
							 gboolean *hminor);
void		gtk_plot_y0line_set_attributes 	(GtkPlot *plot,
						 GtkPlotLineStyle style,
						 gfloat width,
						 const GdkColor *color);
void		gtk_plot_x0line_set_attributes 	(GtkPlot *plot,
						 GtkPlotLineStyle style,
						 gfloat width,
						 const GdkColor *color);
void		gtk_plot_major_hgrid_set_attributes 	(GtkPlot *plot,
						 	 GtkPlotLineStyle style,
						 	 gfloat width,
						 	 const GdkColor *color);